@@ -49,6 +49,8 @@ import dev.langchain4j.data.message.SystemMessage;
 import dev.langchain4j.data.message.TextContent;
 import dev.langchain4j.data.message.ToolExecutionResultMessage;
 import dev.langchain4j.data.message.UserMessage;
+import dev.langchain4j.data.message.VideoContent;
+import dev.langchain4j.data.video.Video;
 import dev.langchain4j.exception.UnsupportedFeatureException;
 import dev.langchain4j.internal.Utils;
 import dev.langchain4j.model.StreamingResponseHandler;
@@ -100,12 +102,13 @@ class QwenHelper {
 
     static String toSingleText(ChatMessage message) {
         return switch (message.type()) {
-            case USER -> ((UserMessage) message)
-                    .contents().stream()
-                            .filter(TextContent.class::isInstance)
-                            .map(TextContent.class::cast)
-                            .map(TextContent::text)
-                            .collect(joining("\n"));
+            case USER ->
+                ((UserMessage) message)
+                        .contents().stream()
+                                .filter(TextContent.class::isInstance)
+                                .map(TextContent.class::cast)
+                                .map(TextContent::text)
+                                .collect(joining("\n"));
             case AI -> ((AiMessage) message).text();
             case SYSTEM -> ((SystemMessage) message).text();
             case TOOL_EXECUTION_RESULT -> ((ToolExecutionResultMessage) message).text();
@@ -148,13 +151,17 @@ class QwenHelper {
 
     static List<Map<String, Object>> toMultiModalContents(ChatMessage message) {
         return switch (message.type()) {
-            case USER -> ((UserMessage) message)
-                    .contents().stream().map(QwenHelper::toMultiModalContent).collect(toList());
+            case USER ->
+                ((UserMessage) message)
+                        .contents().stream()
+                                .map(QwenHelper::toMultiModalContent)
+                                .collect(toList());
             case AI -> Collections.singletonList(Collections.singletonMap("text", ((AiMessage) message).text()));
-            case SYSTEM -> Collections.singletonList(
-                    Collections.singletonMap("text", ((SystemMessage) message).text()));
-            case TOOL_EXECUTION_RESULT -> Collections.singletonList(
-                    Collections.singletonMap("text", ((ToolExecutionResultMessage) message).text()));
+            case SYSTEM ->
+                Collections.singletonList(Collections.singletonMap("text", ((SystemMessage) message).text()));
+            case TOOL_EXECUTION_RESULT ->
+                Collections.singletonList(
+                        Collections.singletonMap("text", ((ToolExecutionResultMessage) message).text()));
             default -> Collections.emptyList();
         };
     }
@@ -182,6 +189,18 @@ class QwenHelper {
                 } else if (Utils.isNotNullOrBlank(audio.base64Data())) {
                     return Collections.singletonMap(
                             "audio", "data:%s;base64,%s".formatted(audio.mimeType(), audio.base64Data()));
+                } else {
+                    return Collections.emptyMap();
+                }
+            case VIDEO:
+                Video video = ((VideoContent) content).video();
+                String videoContent;
+                if (video.url() != null) {
+                    videoContent = video.url().toString();
+                    return Collections.singletonMap("video", videoContent);
+                } else if (Utils.isNotNullOrBlank(video.base64Data())) {
+                    return Collections.singletonMap(
+                            "video", "data:%s;base64,%s".formatted(video.mimeType(), video.base64Data()));
                 } else {
                     return Collections.emptyMap();
                 }
@@ -306,6 +325,28 @@ class QwenHelper {
         };
     }
 
+    static String reasoningContentFrom(GenerationResult result) {
+        return Optional.of(result)
+                .map(GenerationResult::getOutput)
+                .map(GenerationOutput::getChoices)
+                .filter(choices -> !choices.isEmpty())
+                .map(choices -> choices.get(0))
+                .map(Choice::getMessage)
+                .map(Message::getReasoningContent)
+                .orElse(null);
+    }
+
+    static String reasoningContentFrom(MultiModalConversationResult result) {
+        return Optional.of(result)
+                .map(MultiModalConversationResult::getOutput)
+                .map(MultiModalConversationOutput::getChoices)
+                .filter(choices -> !choices.isEmpty())
+                .map(choices -> choices.get(0))
+                .map(MultiModalConversationOutput.Choice::getMessage)
+                .map(MultiModalMessage::getReasoningContent)
+                .orElse(null);
+    }
+
     static boolean isMultimodalModelName(String modelName) {
         // rough judgment
         return modelName.contains("-vl-") || modelName.contains("-audio-");
@@ -313,7 +354,7 @@ class QwenHelper {
 
     static boolean isSupportingIncrementalOutputModelName(String modelName) {
         // rough judgment
-        return !(modelName.contains("-audio-") || modelName.contains("-mt-"));
+        return !modelName.contains("-mt-");
     }
 
     static boolean isMultimodalModel(ChatRequest chatRequest) {
@@ -362,7 +403,7 @@ class QwenHelper {
         if (toolSpecification.parameters() != null) {
             return JsonUtils.toJsonObject(toMap(toolSpecification.parameters()));
         } else {
-            return JsonUtils.toJsonObject(Collections.emptyMap());
+            return JsonUtils.toJsonObject(Map.of());
         }
     }
 
@@ -375,6 +416,7 @@ class QwenHelper {
                         .tokenUsage(tokenUsageFrom(result))
                         .finishReason(finishReasonFrom(result))
                         .searchInfo(convertSearchInfo(result.getOutput().getSearchInfo()))
+                        .reasoningContent(reasoningContentFrom(result))
                         .build())
                 .build();
     }
@@ -445,6 +487,7 @@ class QwenHelper {
                         .modelName(modelName)
                         .tokenUsage(tokenUsageFrom(result))
                         .finishReason(finishReasonFrom(result))
+                        .reasoningContent(reasoningContentFrom(result))
                         .build())
                 .build();
     }
@@ -628,17 +671,12 @@ class QwenHelper {
                     "'frequencyPenalty' parameter is not supported by " + parameters.modelName());
         }
 
-        if (parameters.stopSequences() != null) {
-            throw new UnsupportedFeatureException(
-                    "'stopSequences' parameter is not supported by " + parameters.modelName());
-        }
-
         if (parameters.toolChoice() != null) {
             throw new UnsupportedFeatureException(
                     "'toolChoice' parameter is not supported by " + parameters.modelName());
         }
 
-        if (parameters.toolSpecifications() != null) {
+        if (!isNullOrEmpty(parameters.toolSpecifications())) {
             throw new UnsupportedFeatureException(
                     "'toolSpecifications' parameter is not supported by " + parameters.modelName());
         }
@@ -675,7 +713,9 @@ class QwenHelper {
                 .messages(toQwenMessages(chatRequest.messages()))
                 .responseFormat(toQwenResponseFormat(parameters.responseFormat()))
                 .resultFormat(MESSAGE)
-                .incrementalOutput(incrementalOutput);
+                .incrementalOutput(incrementalOutput)
+                .enableThinking(parameters.enableThinking())
+                .thinkingBudget(parameters.thinkingBudget());
 
         if (parameters.temperature() != null) {
             builder.temperature(parameters.temperature().floatValue());
@@ -735,6 +775,10 @@ class QwenHelper {
             builder.temperature(parameters.temperature().floatValue());
         }
 
+        if (!isNullOrEmpty(parameters.stopSequences())) {
+            builder.parameter("stop", parameters.stopSequences());
+        }
+
         if (parameters.vlHighResolutionImages() != null) {
             // no java field is provided yet
             builder.parameter("vl_high_resolution_images", parameters.vlHighResolutionImages());
@@ -758,10 +802,11 @@ class QwenHelper {
         }
 
         return switch (responseFormat.type()) {
-            case JSON -> com.alibaba.dashscope.common.ResponseFormat.from(
-                    com.alibaba.dashscope.common.ResponseFormat.JSON_OBJECT);
-            case TEXT -> com.alibaba.dashscope.common.ResponseFormat.from(
-                    com.alibaba.dashscope.common.ResponseFormat.TEXT);
+            case JSON ->
+                com.alibaba.dashscope.common.ResponseFormat.from(
+                        com.alibaba.dashscope.common.ResponseFormat.JSON_OBJECT);
+            case TEXT ->
+                com.alibaba.dashscope.common.ResponseFormat.from(com.alibaba.dashscope.common.ResponseFormat.TEXT);
         };
     }
 
